[project]
name = "bfl-comfy-nodes"
description = "ComfyUI nodes for Black Forest Labs API Services"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/black-forest-labs/bfl-comfy-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "bfl-comfy-nodes"
Icon = ""
